--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script type = "text/JavaScript" src = " https://MomentJS.com/downloads/moment.js"></script>
+    <script type = "text/JavaScript" src = " https://momentJS.com/downloads/moment.js"></script>
     <script src="./assets/script.js"></script>
 
 </body>
